# AlachuaHousing

./: CMakeLists.txt  README.md  property.h
data/: README.txt
resources/: resources.qrc
src/: main.cpp  property.cpp  property.h
src/gui/: mainwindow.cpp  mainwindow.h  mapframe.cpp  mapframe.h  mappin.cpp  mappin.h  searchframe.cpp  searchframe.h  selectedpropertyframe.cpp  selectedpropertyframe.h
